# AcceleRAG

./: .gitignore  README.md  agentic_rag_utils.py  arxiv_category_mapper.py  base_classes.py  caches.py  caching_utils.py  doc_indexer.py  embedders.py  generate_digits_dataset.py  indexers.py  indexing_utils.py  managers.py  notes.md  pyproject.toml  query_engines.py  query_utils.py  requirements.txt  retrieval_utils.py  retrievers.py  run_agent.py  runners.py  test_rag_image.py  test_rag_text.py  web_rag_template.txt  web_search_utils.py
.github/: FUNDING.yml
.github/workflows/: anthropic_cota_engine_test.yml  anthropic_rag_test.yml  ci.yml  image_rag_test.yml  installation.yml  openai_cota_engine_test.yml  openai_rag_test.yml
accelerag/: query_router_prompt.txt
accelerag/prompts/: hard_grounding_prompt.txt
arxiv_mini/cs.AI/: 2504.16680v1.txt  2504.16828v1.txt  2504.16907v1.txt
arxiv_mini/cs.LG/: 2504.15077v1.txt  (+6 more)
cachers/: sqlite_cache.py
cota_engine/: __init__.py  thought_actions.py
embedders/: image_embedders.py  text_embedders.py
examples/: ml_pipeline_simple.ipynb  ml_pipeline_simple.py  prompt_rengineering.ipynb  research_assistant.py
indexers/: image_indexers.py  text_indexers.py
managers/: rag_managers.py
prompts/: create_hierarchy_prompt.txt  scorer_prompt.txt  soft_grounding_prompt.txt
query_engines/: __init__.py  query_engines.py
retrievers/: image_retrievers.py  retriever_utils.py  text_retrievers.py
scorers/: scorers.py
tests/: test_accelerag.py  test_cota_engine.py  test_indexing.py  test_rag_image.py  test_rag_text.py
(+46 files in other folders)
